chore: migrate sign in attributes to MDX table

--- a/src/pages/reference-js/sign-in/sign-in.mdx
+++ b/src/pages/reference-js/sign-in/sign-in.mdx
@@ -19,18 +19,48 @@ The `SignIn` object's properties can be split into logical groups, with each gro
 
 ## Attributes
 
-| Name                      | Type                   | Description                                                  |
-| ------------------------- | ---------------------- | ------------------------------------------------------------ |
-| status                    | string                 | The current status of the sign-in. It can take the following values:**needs_identifier**: The authentication identifier hasn't been provided.**needs_first_factor**: First factor verification for the provided identifier needs to be prepared and verified.**needs_second_factor**: Second factor verification (2FA) for the provided identifier needs to be prepared and verified.**complete**: The sign-in is complete and the user is authenticated.**abandoned**: The sign-in has been inactive for a long period of time, thus it's considered as abandoned and need to start over. |
-| supportedIdentifiers      | string[]               | Array of all the authentication identifiers that are supported for this sign in. Examples of this could be **email_address, phone_number, web3_wallet** or **username.** |
-| identifier                | string \| null         | The authentication identifier value for the current sign-in. |
-| supportedExternalAccounts | string[]               | Array of all the external accounts that can be used in this sign in, e.g. **oauth_google**, **oauth_facebook**, etc. |
-| supportedFirstFactors     | SignInFactor[]         | Array of the first factors that are supported in the current sign-in. Each factor contains information about the verification strategy that can be used, e.g. **email_code** for email addresses, **phone_code** for phone numbers, etc., as well as the identifier that the factor refers to. |
-| supportedSecondFactors    | SignInFactor[] \| null | Array of the second factors that are supported in the current sign-in. Each factor contains information about the verification strategy that can be used, e.g. **email_code** for email addresses, **phone_code** for phone numbers, **totp** for TOTPs, etc., as well as the identifier that the factor refers to. Please note that this property is populated only when the first factor is verified. |
-| firstFactorVerification   | VerificationResource   | The state of the verification process for the selected first factor. Please note that this property contains an empty verification object initially, since there is no first factor selected. You need to call the `SignIn.prepareFirstFactor` method in order to start the verification process. |
-| secondFactorVerification  | VerificationResource   | The state of the verification process for the selected second factor. Similar to **firstFactorVerification**, this property contains an empty verification object initially, since there is no second factor selected. For the `phone_code` strategy, you need to call the `SignIn.prepareSecondFactor` method in order to start the verification process. For the `totp` strategy you can directly attempt. |
-| userData                  | UserDate \| null       | An object containing information about the user of the current sign in. This property is populated only once an identifier is given to the `SignIn` object. |
-| createdSessionId          | string \| null         | The identifier of the session that was created upon completion of the current sign-in. The value of this property is **null** if the sign-in status is not **complete**. |
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+    {cells: [<code>status</code>, <code>string</code>, <>
+    The current status of the sign-in. It can take the following values:
+    <ul>
+     <li><code><strong>needs_identifier</strong></code>: The authentication identifier hasn't been provided.</li>
+     <li><code><strong>needs_first_factor</strong></code>: First factor verification for the provided identifier needs to be prepared and verified.</li>
+     <li><code><strong>needs_second_factor</strong></code>: Second factor verification (2FA) for the provided identifier needs to be prepared and verified.</li>
+     <li><code><strong>complete</strong></code>: The sign-in is complete and the user is authenticated.</li>
+     <li><code><strong>abandoned</strong></code>: The sign-in has been inactive for a long period of time, thus it's considered as abandoned and need to start over.</li>
+     </ul>
+    </>]},
+    {cells: [<code>supportedIdentifiers</code>, <code>string[]</code>, <>Array of all the authentication identifiers that are supported for this sign in. Examples of this could be:
+    <ul>
+    <li><code><strong>email_address</strong></code></li>
+    <li><code><strong>phone_number</strong></code></li>
+    <li><code><strong>web3_wallet</strong></code></li>
+    <li><code><strong>username</strong></code></li>
+    </ul>
+    </>]},
+    {cells: [<code>identifier</code>, <code>string | null</code>, <>The authentication identifier value for the current sign-in.</>]},
+    {cells: [<code>supportedExternalAccounts</code>, <code>string[]</code>, <>Array of all the external accounts that can be used in this sign in. For example:<br/><code>["oauth_google", "oauth_facebook"]</code></>]},
+    {cells: [<code>supportedFirstFactors</code>, <code>SignInFactor[]</code>, <>Array of the first factors that are supported in the current sign-in. Each factor contains information about the verification strategy that can be used. For example:
+    <ul>
+    <li><strong><code>email_code</code></strong> for email addresses</li>
+    <li><strong><code>phone_code</code></strong> for phone numbers</li>
+    </ul>
+    As well as the identifier that the factor refers to.</>]},
+    {cells: [<code>supportedSecondFactors</code>, <code>SignInFactor[]</code>, <>Array of the second factors that are supported in the current sign-in. Each factor contains information about the verification strategy that can be used, for example:
+    <ul>
+    <li><strong><code>email_code</code></strong> for email addresses</li>
+    <li><strong><code>totp</code></strong> for TOTPs</li>
+    </ul>
+    As well as the identifier that the factor refers to. Please note that this property is populated only when the first factor is verified.</>]},
+    {cells: [<code>firstFactorVerification</code>, <code>Verification</code>, <>The state of the verification process for the selected first factor. Please note that this property contains an empty verification object initially, since there is no first factor selected. You need to call the <a href="/reference-js/sign-in/first-factor#preparefirstfactor"><code>prepareFirstFactor</code></a> method in order to start the verification process.</>]},
+    {cells: [<code>secondFactorVerification</code>, <code>Verification</code>, <>The state of the verification process for the selected second factor. Similar to <strong><code>firstFactorVerification</code></strong>, this property contains an empty verification object initially, since there is no second factor selected. For the <code>phone_code</code> strategy, you need to call the <a href="/reference-js/sign-in/second-factor#preparesecondfactor"><code>prepareSecondFactor</code></a> method in order to start the verification process. For the <code>totp</code> strategy you can directly attempt.</>]},
+    {cells: [<code>userData</code>, <code>UserDate</code>, <>An object containing information about the user of the current sign in. This property is populated only once an identifier is given to the <code>SignIn</code> object.</>]},
+    {cells: [<code>createdSessionId</code>, <code>string | null</code>, <>The identifier of the session that was created upon completion of the current sign-in. The value of this property is <strong><code>null</code></strong> if the sign-in status is not <strong><code>complete</code></strong>.</>]},
+  ]}
+/>
 
 ## Methods
 
