chore: fill in verification attempt docs

--- a/src/pages/reference-js/verification.mdx
+++ b/src/pages/reference-js/verification.mdx
@@ -5,19 +5,19 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `Verification`
 
+The state of the verification process of a sign-in or sign-up attempt.
 
 <Tables
   headings={["Name", "Type", "Description"]}
-  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
   rows={[
-    {cells: [<code>attempts</code>, <code>number | null</code>, <></>]},
-    {cells: [<code>error</code>, <code>ClerkAPIError | null</code>, <></>]},
-    {cells: [<code>expireAt</code>, <code>Date | null</code>, <></>]},
-    {cells: [<code>externalVerificationRedirectURL</code>, <code>URL | null</code>, <></>]},
-    {cells: [<code>nonce</code>, <code>string | null</code>, <></>]},
-    {cells: [<code>status</code>, <code>VerificationStatus | null</code>, <></>]},
-    {cells: [<code>strategy</code>, <code>string | null</code>, <></>]},
-    {cells: [<code>verifiedAtClient</code>, <code>string | null</code>, <></>]}
+    {cells: [<code>attempts</code>, <code>number | null</code>, <>The number of attempts related to the verification.</>]},
+    {cells: [<code>error</code>, <code>ClerkAPIError | null</code>, <>The last error the verification attempt ran into.</>]},
+    {cells: [<code>expireAt</code>, <code>Date | null</code>, <>The time the verification will expire at.</>]},
+    {cells: [<code>externalVerificationRedirectURL</code>, <code>URL | null</code>, <>The redirect URL for an external verification.</>]},
+    {cells: [<code>nonce</code>, <code>string | null</code>, <>The <a href="https://en.wikipedia.org/wiki/Cryptographic_nonce">nonce</a> pertaining to the verification.</>]},
+    {cells: [<code>status</code>, <code>'unverified' | 'verified' | 'transferable' | 'failed' | 'expired' | null</code>, <>The state of the verification.</>]},
+    {cells: [<code>strategy</code>, <code>string | null</code>, <>The strategy pertaining to the parent Sign Up or Sign In attempt</>]},
   ]}
 />
 
@@ -28,3 +28,5 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 ```typescript
 function verifiedFromTheSameClient(): boolean;
 ```
+
+A check to see if the verification was verified from the same client as the parent Sign In or Sign Up attempt. IE: The same browser session.
