docs: add missing props from upstream

--- a/src/pages/reference-js/sign-in/authenticate-with.mdx
+++ b/src/pages/reference-js/sign-in/authenticate-with.mdx
@@ -1,3 +1,13 @@
+import { Tab, Tabs } from "nextra-theme-docs";
+import { Tables } from "@/components/Table";
+import { Images } from "@/components/Images";
+import { CodeBlockTabs } from "@/components/CodeBlockTabs";
+
+# Authenticate With
+
+These are all methods on [the `SignIn` class](/reference-js/sign-in/sign-in) that allow you to authenticate with different methods.
+
+## Methods
 
 ### `authenticateWithRedirect()`
 
@@ -7,13 +17,15 @@ authenticateWithRedirect(params: AuthenticateWithRedirectParams) => Promise<void
 
 Signs in users via OAuth. This is commonly known as Single Sign On (SSO), where an external account is used for verifying the user's identity.
 
-**Parameters**
+#### `AuthenticateWithRedirectParams`
 
-| Type   | Description                                                  |
-| ------ | ------------------------------------------------------------ |
-| params | An object that specifies the verification strategy (one of the supported OAuth providers), the callback URL the OAuth provider should redirect to, as well as the URL that the user should be redirected to upon successful sign in. |
+| Name                | Type   | Description                                                  |
+| ------------------- | ------ | ------------------------------------------------------------ |
+| strategy            | string | The OAuth provider that will be used for singing in. Must be one of the supported [`OAuthStrategy`](#oauthstrategy) . |
+| redirectUrl         | string | The URL that the OAuth provider should redirect to, on successful authorization on their part. |
+| redirectUrlComplete | string | The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in |
 
-**Returns**
+#### Returns
 
 | Type          | Description                                                  |
 | ------------- | ------------------------------------------------------------ |
@@ -42,3 +54,43 @@ This methods does not accept any parameters.
 ```typescript
 function authenticateWithWeb3(params: AuthenticateWithWeb3Params): Promise<SignInResource>;
 ```
+
+#### `AuthenticateWithWeb3Params`
+
+
+| Name                | Type   | Description                                                  |
+| ------------------- | ------ | ------------------------------------------------------------ |
+| identifier | string | |
+| generateSignature | {"(opts: GenerateSignatureParams) => Promise<string>"} |  |
+
+#### `GenerateSignatureParams`
+
+| Name                | Type   | Description                                                  |
+| ------------------- | ------ | ------------------------------------------------------------ |
+| identifier | string | |
+| nonce | string | |
+
+## Types
+
+### `OAuthStrategy`
+
+```
+oauth_facebook | oauth_github | oauth_google | oauth_hubspot | oauth_tiktok | oauth_gitlab | oauth_discord | oauth_twitter | oauth_twitch | oauth_linkedin | oauth_dropbox | oauth_bitbucket | oauth_microsoft | oauth_notion
+```
+
+| Value           | Description                                           |
+| --------------- | ----------------------------------------------------- |
+| oauth_facebook  | Specify Facebook as the verification OAuth provider.  |
+| oauth_github    | Specify Github as the verification OAuth provider.    |
+| oauth_google    | Specify Google as the verification OAuth provider.    |
+| oauth_hubspot   | Specify HubSpot as the verification OAuth provider.   |
+| oauth_tiktok    | Specify TikTok as the verification OAuth provider.    |
+| oauth_gitlab    | Specify GitLab as the verification OAuth provider.    |
+| oauth_discord   | Specify Discord as the verification OAuth provider.   |
+| oauth_twitter   | Specify Twitter as the verification OAuth provider.   |
+| oauth_twitch    | Specify Twitch as the verification OAuth provider.    |
+| oauth_linkedin  | Specify LinkedIn as the verification OAuth provider.  |
+| oauth_dropbox   | Specify Dropbox as the verification OAuth provider.   |
+| oauth_bitbucket | Specify Bitbucket as the verification OAuth provider. |
+| oauth_microsoft | Specify Microsoft as the verification OAuth provider. |
+| oauth_notion    | Specify Notion as the verification OAuth provider.    |
