--- a/src/pages/reference-js/sign-in/first-factor.mdx
+++ b/src/pages/reference-js/sign-in/first-factor.mdx
@@ -11,20 +11,25 @@ These are all methods on [the `SignIn` class](/reference-js/sign-in/sign-in) tha
 ## `prepareFirstFactor()`
 
 ```
-prepareFirstFactor(params: PrepareFirstFactorParams) => Promise<SignInResource>
+prepareFirstFactor(params: PrepareFirstFactorParams) => Promise<SignIn>
 ```
 
 Begins the first factor verification process. This is a required step in order to complete a sign in, as users should be verified at least by one factor of authentication.
 
 Common scenarios are one-time code (OTP) or social account (SSO) verification. This is determined by the accepted `strategy` parameter values. Each authentication identifier supports different strategies.
 
-**Parameters**
+### `PrepareFirstFactorParams`
 
-| Name   | Description                                                  |
-| ------ | ------------------------------------------------------------ |
-| params | [*PrepareFirstFactorParams*](https://clerk.com/docs/reference/clerkjs/signin#prepare-first-factor) An object that allows you to specify a verification strategy and any strategy-specific additional data. |
+| Name                       | Type   | Description                                                  |
+| -------------------------- | ------ | ------------------------------------------------------------ |
+| strategy                   | string | The `strategy` value depends on the object's` identifier` value. Each authentication identifier supports different verification strategies. Possible strategy values are:**email_link**: User will receive an email magic link via email. The `email_address_id` parameter can also be specified to select one of the user's known email addresses.**email_code**: User will receive a one-time authentication code via email. At least one email address should be on file for the user. The `email_address_id` parameter can also be specified to select one of the user's known email addresses.**phone_code**: User will receive a one-time authentication code in their phone, via SMS. At least one phone number should be on file for the user. The `phone_number_id` parameter can also be specified to select which of the user's known phone numbers the SMS will go to.**web3_metamask_signature**: The verification will attempt to be completed using the user's web3 wallet public address. The `web3_wallet_id` parameter can also be specified to select which of the user's known web3 wallets will be used. Currently Clerk supports [Metamask](https://metamask.io/).**{"oauth_<provider>"}**: The user will be authenticated with their Social login account. See available [OAuth Strategies](https://clerk.com/docs/reference/clerkjs/signin#oauth-strategies). |
+| emailAddressId?            | string | Unique identifier for the user's email address that will receive an email message with the one-time authentication code. This parameter will work only when the **email_code** strategy is specified. |
+| phoneNumberId?             | string | Unique identifier for the user's phone number that will receive an SMS message with the one-time authentication code. This parameter will work only when the **phone_code** strategy is specified. |
+| web3WalletId?              | string | Unique identifier for the user's web3 wallet public address. This parameter will work only when the **web3_metamask_signature** strategy is specified. |
+| redirectUrl?               | string | The URL that the OAuth provider should redirect to, on successful authorization on their part. This parameter is required only for OAuth strategies **(oauth_\*)**. |
+| actionCompleteRedirectUrl? | string | The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in. This parameter is required only for OAuth strategies **(oauth_\*)**. |
 
-**Returns**
+### Returns
 
 | Type                    | Description                                                  |
 | ----------------------- | ------------------------------------------------------------ |
@@ -42,13 +47,16 @@ Make sure that a `SignIn` object already exists before you call this method, eit
 
 Depending on the strategy that was selected when the verification was prepared, the method parameters should be different.
 
-**Parameters**
+### `AttemptFirstFactorParams`
 
-| Name   | Description                                                  |
-| ------ | ------------------------------------------------------------ |
-| params | [*AttemptFirstFactorParams*](https://clerk.com/docs/reference/clerkjs/signin#attempt-first-factor) An object that includes the verification strategy and the evidence that's needed to identify the user and complete the verification process. |
+| Name       | Type   | Description                                                  |
+| ---------- | ------ | ------------------------------------------------------------ |
+| strategy   | string | The `strategy` value depends on the object's `identifier` value. Each authentication identifier supports different verification strategies. Possible `strategy` values are: email_link: User will receive an email magic link via email. The email_address_id parameter can also be specified to select one of the user's known email addresses.**email_code**: User will receive a one-time authentication code via email. At least one email address should be on file for the user. The email_address_id parameter can also be specified to select one of the user's known email addresses.**phone_code**: User will receive a one-time authentication code in their phone, via SMS. At least one phone number should be on file for the user. The phone_number_id parameter can also be specified to select which of the user's known phone numbers the SMS will go to.**password**: The verification will attempt to be completed with the user's password.**web3_metamask_signature**: The verification will attempt to be completed using the user's web3 wallet public address. |
+| code?      | string | The one-time code that was sent to the user as part of this verification step. Required when `strategy` is **email_code** or **phone_code**. |
+| password?  | string | The user's password string. Required when `strategy` is **password**. |
+| signature? | string | Web3 wallet generated signature to be verified. This parameter is required only for web3 verification strategies. |
 
-**Returns**
+### Returns
 
 | Type                    | Description                                                  |
 | ----------------------- | ------------------------------------------------------------ |
