chore: migrate more tables to MDX

--- a/src/pages/reference-js/sign-in/sign-in.mdx
+++ b/src/pages/reference-js/sign-in/sign-in.mdx
@@ -76,20 +76,39 @@ Depending on the use-case and the `params` you pass to the `create` method, it c
 
 #### `SignInCreateParams`
 
-| Name                      | Type   | Description                                                  |
-| ------------------------- | ------ | ------------------------------------------------------------ |
-| identifier                | string | The authentication identifier for the sign in. This can be the value of the user's email address, phone number or username. |
-| strategy                  | string | Optional. Select the first factor verification strategy. The `strategy` value depends on the object's `identifier` value. Each authentication identifier supports different verification strategies. Possible `strategy` values are:**email_link**: User will receive an email magic link via email. The `email_address_id` parameter can also be specified to select one of the user's known email addresses.**email_code**: User will receive a one-time authentication code via email. At least one email address should be on file for the user. The `email_address_id` parameter can also be specified to select one of the user's known email addresses.**phone_code**: User will receive a one-time authentication code in their phone, via SMS. At least one phone number should be on file for the user. The `phone_number_id` parameter can also be specified to select which of the user's known phone numbers the SMS will go to.**web3_metamask_signature**: The verification will attempt to be completed using the user's web3 wallet public address. The `web3_wallet_id` parameter can also be specified to select which of the user's known web3 wallets will be used. Currently Clerk supports [Metamask](https://metamask.io/).**{"oauth_<provider>"}**: The user will be authenticated with their Social login account. See available OAuth Strategies.**ticket**: The user will be authenticated via a "ticket" or "token" generated from the Backend API. |
-| password                  | string | Supply the user's password, if **password** strategy has been specified. |
-| ticket                    | string | If the strategy is **ticket** you need to provide the ticket *or token* generated from the Backend API. |
-| redirectUrl               | string | The URL that the OAuth provider should redirect to, on successful authorization on their part. This parameter is required only for OAuth strategies **(oauth_\*)**. |
-| actionCompleteRedirectUrl | string | The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in. This parameter is required only for OAuth strategies **(oauth_\*)**. |
 
-**Returns**
 
-| Type                    | Description                                                  |
-| ----------------------- | ------------------------------------------------------------ |
-| {"Promise<SignIn>"} | This method returns a `Promise` which resolves with a `SignIn` object. Check the `status` attribute to see if the `SignIn` has been completed or a hint on what needs to happen next. |
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+    {cells: [<code>identifier</code>, <code>string</code>, <>The authentication identifier for the sign in. This can be the value of the user's email address, phone number or username.</>]},
+{cells: [<code>strategy</code>, <code>string</code>,<>Optional. Select the first factor verification strategy. The <code>strategy</code> value depends on the object's <code>identifier</code> value. Each authentication identifier supports different verification strategies. Possible <code>strategy</code> values are:
+<ul>
+<li><strong><code>email_link</code></strong>: User will receive an email magic link via email. The <code>email_address_id</code> parameter can also be specified to select one of the user's known email addresses.</li>
+<li><strong><code>email_code</code></strong>: User will receive a one-time authentication code via email. At least one email address should be on file for the user. The <code>email_address_id</code> parameter can also be specified to select one of the user's known email addresses.</li>
+<li><strong><code>phone_code</code></strong>: User will receive a one-time authentication code in their phone, via SMS. At least one phone number should be on file for the user. The <code>phone_number_id</code> parameter can also be specified to select which of the user's known phone numbers the SMS will go to.</li>
+<li><strong><code>web3_metamask_signature</code></strong>: The verification will attempt to be completed using the user's web3 wallet public address. The <code>web3_wallet_id</code> parameter can also be specified to select which of the user's known web3 wallets will be used. Currently Clerk supports [Metamask](https://metamask.io/).</li>
+<li><strong><code>{"oauth_<provider>"}</code></strong>: The user will be authenticated with their Social login account. See available OAuth Strategies.</li>
+<li><strong><code>ticket</code></strong>: The user will be authenticated via a "ticket" or "token" generated from the Backend API.</li>
+</ul></>]},
+{cells: [<code>password</code>, <code>string</code>, <>Optional. Supply the user's password, if <strong><code>password</code></strong> strategy has been specified.</>]},
+{cells: [<code>ticket</code>, <code>string</code>, <>Optional. If the strategy is <strong><code>ticket</code></strong> you need to provide the ticket <em>or token</em> generated from the Backend API.</>]},
+{cells: [<code>redirectUrl</code>, <code>string</code>, <>The URL that the OAuth provider should redirect to, on successful authorization on their part. This parameter is required only for OAuth strategies <strong><code>(oauth_*)</code></strong>.</>]},
+{cells: [<code>actionCompleteRedirectUrl</code>, <code>string</code>, <>The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in. This parameter is required only for OAuth strategies <strong><code>(oauth_*)</code></strong>.</>]},
+//{cells: [<code>transfer</code>, <code>boolean</code>, <></>]},
+  ]}
+  />
+
+#### Returns
+
+<Tables
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
+    {cells: [<code>{"Promise<SignIn>"}</code>, <>This method returns a <code>Promise</code> which resolves with a <code>SignIn</code> object. Check the <code>status</code> attribute to see if the <code>SignIn</code> has been completed or a hint on what needs to happen next.</>]},
+  ]}
+  />
 
 ### `resetPassword()`
 
